--- a/CompareTables/MainWindow.xaml
+++ b/CompareTables/MainWindow.xaml
@@ -5,7 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CompareTables"
         mc:Ignorable="d"
-        Title="MainWindow" Height="500" Width="500">
+        ResizeMode="NoResize"
+        Title="Свёрка таблиц" Height="600" Width="800"
+        x:Name="mainWindow">
     <Window.Resources>
         <ControlTemplate TargetType="Button" x:Key="btTemplate">
             <Border
@@ -51,7 +53,7 @@
         </ControlTemplate>
     </Window.Resources>
 
-    <Grid Background="Silver">
+    <Grid Background="Silver" x:Name="fullGrid">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
@@ -64,18 +66,37 @@
         <!-- ректанглы для драг-н-дропа -->
         <Rectangle x:Name="Field1"  Grid.Column="0" Fill="Silver" Grid.Row="0" Grid.RowSpan="2" Stroke="DimGray" StrokeDashArray="4 2" StrokeThickness="3" AllowDrop="True" DragEnter="field1Enter" DragLeave="field1Leave" Drop="File1_Drop"/>
         <Rectangle  x:Name="Field2" Grid.Column="1" Fill="Silver" Grid.Row="0" Grid.RowSpan="2" Stroke="DimGray" StrokeDashArray="4 2" StrokeThickness="3" AllowDrop="True" DragEnter="field2Enter" DragLeave="field2Leave" Drop="File2_Drop"/>
-
+        <Line Stroke="Silver" Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" X1="2" Y1="0" X2="2" Y2="375" StrokeThickness="4" x:Name="lineFix"/>
         <Button x:Name="File1" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Content="Выберите файл 1" Template="{StaticResource btTemplate}" Click="File1_Click" Width="110" AllowDrop="True" DragEnter="field1Enter" DragLeave="field1Leave" Drop="File1_Drop"/>
         <Button x:Name="File2" Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Content="Выберите файл 2" Template="{StaticResource btTemplate}"  Click="File2_Click"  Width="110" AllowDrop="True" DragEnter="field2Enter" DragLeave="field2Leave" Drop="File2_Drop"/>
-        <Button x:Name="Action" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Content="Do some fucking magic" Template="{StaticResource btTemplate}"  Click="Action_Click"   Width="150"/>
-        <Label Grid.Column="0" Grid.Row="1" Content="Или перетащите файл 1 сюда" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold"
+        <Button x:Name="Action" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Content="Сравнить" Template="{StaticResource btTemplate}" Click="Action_Click" Margin="325,123,331,-12"/>
+        <Label Grid.Column="0" Grid.Row="1" Content="Или перетащите файл 1 сюда" VerticalAlignment="Center" HorizontalAlignment="Center"  FontWeight="Bold"
                     Foreground="DimGray" FontSize="14" AllowDrop="True" DragEnter="field1Enter" DragLeave="field1Leave" Drop="File1_Drop"/>
         <Label Grid.Column="1" Grid.Row="1" Content="Или перетащите файл 2 сюда" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold"
                     Foreground="DimGray" FontSize="14" AllowDrop="True" DragEnter="field2Enter" DragLeave="field2Leave" Drop="File2_Drop"/>
         <!-- <WrapPanel  x:Name="Field2" Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Stroke="DimGray" StrokeDashArray="4 2" StrokeThickness="3" AllowDrop="True"/>
         -->
-        <TextBox Grid.Row="2" Grid.Column="0" Margin="50,15,50,117" x:Name="text1" TextWrapping="Wrap" />
-        <TextBox Grid.Row="2" Grid.Column="1" Margin="50,15,50,117" x:Name="text2" TextWrapping="Wrap" Height="Auto"/>
+
+        <Label  Content="1-ая ячейка файла 1:" Margin="10,5,60,130" Grid.Row="2" FontWeight="Bold" Foreground="DimGray" FontSize="14"/>
+        <Label Grid.Row="2" Grid.Column="1" Content="1-ая ячейка файла 2:" Margin="10,5,60,130" FontWeight="Bold" Foreground="DimGray" FontSize="14" Grid.RowSpan="2"/>
+        <TextBox Grid.Row="2" Grid.Column="0" Margin="250, 10, 70,155" Text="A1" TextWrapping="Wrap" x:Name="text1"/>
+        <TextBox Grid.Row="2" Grid.Column="1" Margin="250, 10, 70,155" Text="A1" TextWrapping="Wrap" x:Name="text2"/>
+
+        <Label  Content="1-ая ячейка названий файла 1:" Margin="10,40,60, 95" Grid.Row="2" FontWeight="Bold" Foreground="DimGray" FontSize="14"/>
+        <Label Grid.Row="2" Grid.Column="1" Content="1-ая ячейка названий файла 2:" Margin="10,40,60,95" FontWeight="Bold" Foreground="DimGray" FontSize="14" Grid.RowSpan="2"/>
+        <TextBox Grid.Row="2" Grid.Column="0" Margin="250, 45,70,120"  TextWrapping="Wrap" x:Name="text1name" />
+        <TextBox Grid.Row="2" Grid.Column="1" Margin="250, 45,70,120"  TextWrapping="Wrap" x:Name="text2name" />
+
+
+        <Label  Content="1-ая ячейка суммы файла 1:" Margin="10,75,60,60" Grid.Row="2" FontWeight="Bold" Foreground="DimGray" FontSize="14"/>
+        <Label Grid.Row="2" Grid.Column="1" Content="1-ая ячейка суммы файла 2:" Margin="10,75,60,60" FontWeight="Bold" Foreground="DimGray" FontSize="14" Grid.RowSpan="2"/>
+        <TextBox Grid.Row="2" Grid.Column="0" Margin="250, 80, 70, 85"  TextWrapping="Wrap"  x:Name="text1sum"/>
+        <TextBox Grid.Row="2" Grid.Column="1" Margin="250, 80, 70, 85"  TextWrapping="Wrap" x:Name="text2sum"/>
+
+        <Label  Content="1-ая ячейка количества файла 1:" Margin="10,110,60,25" Grid.Row="2" FontWeight="Bold" Foreground="DimGray" FontSize="14"/>
+        <Label Grid.Row="2" Grid.Column="1" Content="1-ая ячейка количества файла 2:" Margin="10,110,60,25" FontWeight="Bold" Foreground="DimGray" FontSize="14" Grid.RowSpan="2"/>
+        <TextBox Grid.Row="2" Grid.Column="0" Margin="250, 115,70,50"  TextWrapping="Wrap" x:Name="text1count"/>
+        <TextBox Grid.Row="2" Grid.Column="1" Margin="250, 115,70,50"  TextWrapping="Wrap" x:Name="text2count" />
 
     </Grid>
 </Window>
