--- a/CompareTables/MainWindow.xaml
+++ b/CompareTables/MainWindow.xaml
@@ -80,24 +80,24 @@
 
         <Label  Content="1-ая ячейка файла 1:" Margin="10,5,60,130" Grid.Row="2" FontWeight="Bold" Foreground="DimGray" FontSize="14"/>
         <Label Grid.Row="2" Grid.Column="1" Content="1-ая ячейка файла 2:" Margin="10,5,60,130" FontWeight="Bold" Foreground="DimGray" FontSize="14" Grid.RowSpan="2"/>
-        <TextBox Grid.Row="2" Grid.Column="0" Margin="250, 10, 70,155" Text="A1" TextWrapping="Wrap" x:Name="text1"/>
-        <TextBox Grid.Row="2" Grid.Column="1" Margin="250, 10, 70,155" Text="A1" TextWrapping="Wrap" x:Name="text2"/>
+        <TextBox Grid.Row="2" Grid.Column="0" Margin="250, 10, 70,155" Text="A1" TextWrapping="Wrap" x:Name="text1" PreviewTextInput="text1_PreviewTextInput" />
+        <TextBox Grid.Row="2" Grid.Column="1" Margin="250, 10, 70,155" Text="A1" TextWrapping="Wrap" x:Name="text2" PreviewTextInput="text1_PreviewTextInput"/>
 
         <Label  Content="1-ая ячейка названий файла 1:" Margin="10,40,60, 95" Grid.Row="2" FontWeight="Bold" Foreground="DimGray" FontSize="14"/>
         <Label Grid.Row="2" Grid.Column="1" Content="1-ая ячейка названий файла 2:" Margin="10,40,60,95" FontWeight="Bold" Foreground="DimGray" FontSize="14" Grid.RowSpan="2"/>
-        <TextBox Grid.Row="2" Grid.Column="0" Margin="250, 45,70,120"  Text="B1" TextWrapping="Wrap" x:Name="text1name" />
-        <TextBox Grid.Row="2" Grid.Column="1" Margin="250, 45,70,120"  Text="B1" TextWrapping="Wrap" x:Name="text2name" />
+        <TextBox Grid.Row="2" Grid.Column="0" Margin="250, 45,70,120"  Text="B1" TextWrapping="Wrap" x:Name="text1name" PreviewTextInput="text1_PreviewTextInput"/>
+        <TextBox Grid.Row="2" Grid.Column="1" Margin="250, 45,70,120"  Text="B1" TextWrapping="Wrap" x:Name="text2name" PreviewTextInput="text1_PreviewTextInput"/>
 
 
         <Label  Content="1-ая ячейка суммы файла 1:" Margin="10,75,60,60" Grid.Row="2" FontWeight="Bold" Foreground="DimGray" FontSize="14"/>
         <Label Grid.Row="2" Grid.Column="1" Content="1-ая ячейка суммы файла 2:" Margin="10,75,60,60" FontWeight="Bold" Foreground="DimGray" FontSize="14" Grid.RowSpan="2"/>
-        <TextBox Grid.Row="2" Grid.Column="0" Margin="250, 80, 70, 85"  Text="D1" TextWrapping="Wrap"  x:Name="text1sum"/>
-        <TextBox Grid.Row="2" Grid.Column="1" Margin="250, 80, 70, 85"  Text="D1" TextWrapping="Wrap" x:Name="text2sum"/>
+        <TextBox Grid.Row="2" Grid.Column="0" Margin="250, 80, 70, 85"  Text="D1" TextWrapping="Wrap"  x:Name="text1sum" PreviewTextInput="text1_PreviewTextInput"/>
+        <TextBox Grid.Row="2" Grid.Column="1" Margin="250, 80, 70, 85"  Text="D1" TextWrapping="Wrap" x:Name="text2sum" PreviewTextInput="text1_PreviewTextInput"/>
 
         <Label  Content="1-ая ячейка количества файла 1:" Margin="10,110,60,25" Grid.Row="2" FontWeight="Bold" Foreground="DimGray" FontSize="14"/>
         <Label Grid.Row="2" Grid.Column="1" Content="1-ая ячейка количества файла 2:" Margin="10,110,60,25" FontWeight="Bold" Foreground="DimGray" FontSize="14" Grid.RowSpan="2"/>
-        <TextBox Grid.Row="2" Grid.Column="0" Margin="250, 115,70,50" Text="C1" TextWrapping="Wrap" x:Name="text1count"/>
-        <TextBox Grid.Row="2" Grid.Column="1" Margin="250, 115,70,50" Text="C1" TextWrapping="Wrap" x:Name="text2count" />
+        <TextBox Grid.Row="2" Grid.Column="0" Margin="250, 115,70,50" Text="C1" TextWrapping="Wrap" x:Name="text1count" PreviewTextInput="text1_PreviewTextInput"/>
+        <TextBox Grid.Row="2" Grid.Column="1" Margin="250, 115,70,50" Text="C1" TextWrapping="Wrap" x:Name="text2count" PreviewTextInput="text1_PreviewTextInput"/>
 <!--
         <Rectangle  x:Name="wait0" Fill="AliceBlue" Grid.ColumnSpan="2" Grid.RowSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" Width="400" Height="200"/>
      -->
